Issue corrected of button and alignment .of new tag

--- a/style1.css
+++ b/style1.css
@@ -414,7 +414,7 @@ h3{
     padding: 33px 20px;
     border-radius: 50%;
     top: -38px;
-    right: -38px;
+    right: -29px;
 }
 .sub-card{
     position: relative;
